load("@crates_mcp_re//:defs.bzl", "all_crate_deps")
load("//bazel:defs.bzl", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# ADR-MCPS-011/012: mcp-re-core stays pure (no networking / async / filesystem).
# Crate deps come from the isolated `crates_mcp_re` crate_universe hub
# (serde, serde_json, ed25519-dalek, sha2, base64, thiserror; dev: hex).
nt_rust_library(
    name = "mcp_re_core",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "mcp_re_core",
    edition = "2021",
    deps = all_crate_deps(normal = True),
)

nt_rust_test(
    name = "mcp_re_core_test",
    crate = ":mcp_re_core",
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = all_crate_deps(normal_dev = True),
)

# ADR-MCPS-034: the Core source tree, exposed so the method-name drift guard in
# mcp-re-conformance can scan non-test mcp-re-core/src for banned MCP method-name
# literals from DISK (via runfiles) — the same data-dep scheme the conformance
# drift_guard uses for the vector fixtures.
filegroup(
    name = "src_files",
    srcs = glob(["src/**/*.rs"]),
)
# ADR-MCPRE-051 "Compliance and Enforcement": the core purity firewall. Reads the
# committed Cargo.toml + BUILD.bazel at compile time (include_str!) and fails on
# any networking/async/fs or up-stack crate in the declared deps — encoding the
# ADR-051 split (core pure; the async stack is admitted into the proxy serving
# path only). They must be compile inputs in the sandbox.
nt_rust_test(
    name = "firewall_test",
    srcs = ["tests/firewall_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    compile_data = [
        "Cargo.toml",
        "BUILD.bazel",
    ],
    edition = "2021",
    deps = [
        ":mcp_re_core",
    ],
)
