[package]
name = "mcp-re-demo-fileserver"
version = "0.10.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Minimal, MCP-RE-unaware stdio MCP server (demo target for the MCP-RE sidecar)."

# MCPS-045 (MCP-RE-EPIC-P6.5): an ORDINARY MCP server that knows nothing about
# MCP-RE signing/envelopes/verified-context. It depends only on the pure serde
# subset plus thiserror — no other in-repo crate, no async runtime. It MAY use
# std::fs / std::io (it is a filesystem server), unlike the pure mcp-re-core.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mcp-re-test-paths = { path = "../mcp-re-test-paths" }

[lib]
name = "mcp_re_demo_fileserver"
path = "src/lib.rs"

[[bin]]
name = "mcp-re-demo-fileserver"
path = "src/main.rs"
