load("//bazel:defs.bzl", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# MCP-RE mTLS/fixtures demo surface. `DemoFixtures` mints the demo mTLS material
# with rcgen (the ONE source-of-truth material set) for the proxy/client round-trip
# tests. MCP-RE is HTTP-profile only — the stdio demo servers, bridge, the runnable
# client binaries, and their e2e topology were removed; a stdio-only host uses an
# external plain-MCP adapter (e.g. FastMCP).
nt_rust_library(
    name = "mcp_re_demo",
    srcs = [
        "src/demo_fixtures.rs",
        "src/lib.rs",
    ],
    crate_name = "mcp_re_demo",
    edition = "2021",
    deps = [
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host_test_fixtures",  # keep
        "//mcp-re-http-profile:mcp_re_http_profile",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:serde_json",
        "@crates_mcp_re//:time",
    ],
)

# MCPS-055 (MCP-RE-EPIC-P6.6, Child Issue 3): the shared demo fixtures helper. Proves
# the ONE-source-of-truth material set is internally consistent — the positive
# client identity drives a REAL mcp_re_proxy::serve_once mTLS round trip wired
# entirely from the fixture PEM and equals the signer; the mismatched identity
# chains to the same client CA yet differs (T3); the server leaf does not chain to
# the client CA; write_files materializes every proxy/client input and cleans up.
nt_rust_test(
    name = "demo_fixtures_test",
    srcs = ["tests/demo_fixtures_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_demo",
        "//mcp-re-proxy:mcp_re_proxy",
        "//mcp-re-transport:mcp_re_transport",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:serde_json",
    ],
)
